fix(@vtmn/svelte): add flex auto + remove overflow indicator

--- a/packages/sources/css/src/components/overlays/modal/src/index.css
+++ b/packages/sources/css/src/components/overlays/modal/src/index.css
@@ -52,6 +52,7 @@
   font-weight: var(--vtmn-typo_font-weight--bold);
   font-size: rem(26px);
   line-height: rem(32px);
+  flex: auto;
 }
 
 .vtmn-modal_content_title .vtmn-btn {
@@ -75,12 +76,12 @@
 }
 
 .vtmn-modal_content_body--text {
-  padding-bottom: rem(30px);
   font-weight: var(--vtmn-typo_font-weight--normal);
   font-size: var(--vtmn-typo_text-3-font-size);
   line-height: rem(24px);
   align-self: flex-start;
   text-align: left;
+  flex: auto;
 }
 
 .vtmn-modal_content_actions {
